--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -2,8 +2,9 @@
 $white: #ffffff;
 $basic-black: #000000;
 $black: #1f1f1f;
-$dark-background: #131314;
 $turquoise: #0ad9c6;
+$dark-background: #131314;
+$light-background: #f6f7f9;
 
 // Viewport
 $tablet-max-width: 1023px;
