--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,7 @@ $black: #1f1f1f;
 $turquoise: #0ad9c6;
 $dark-background: #131314;
 $light-background: #f6f7f9;
+$grey: #48494d;
 
 // Viewport
 $tablet-max-width: 1023px;
