--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,8 @@
 @import "global/fonts.scss";
 @import "global/global.scss";
 @import "global/variables.scss";
+
+//blocks
+@import "blocks/main-navigation.scss";
+@import "blocks/page-body.scss";
+@import "blocks/page-header.scss";
