--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,13 +1,10 @@
-.main-navigation {
-  position: relative;
-  width: max-content;
-
-
+.main-navigation  {
   ul {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 0;
-    margin-bottom: 0;
+    width: max-content;
+    min-width: 67%;
+    margin: 0 auto;
     padding-left: 21px;
     padding-right: 21px;
     list-style: none;
@@ -132,7 +129,7 @@
   }
 
   &:not(:last-child) {
-    margin-right: 9%;
+    margin-right: 10%;
 
     @media (max-width: $tablet-max-width) {
       margin-right: 0;
@@ -190,8 +187,7 @@
 
 .main-navigation__logo {
   position: absolute;
-  top: 318px;
-  left: 0;
+  top: 308px;
 
   @media (max-width: $tablet-max-width) {
     position: static;
