--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -14,6 +14,7 @@
 
     @media (max-width: $tablet-max-width) {
       font-size: 24px;
+      line-height: 41px;
     }
     @media (max-width: $mobile-max-width) {
       font-size: 18px;
