--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,11 +4,13 @@
 @import "global/variables.scss";
 
 //blocks
+@import "blocks/about.scss";
 @import "blocks/button.scss";
 @import "blocks/form.scss";
 @import "blocks/main-navigation.scss";
 @import "blocks/page-body.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
 @import "blocks/promo.scss";
 @import "blocks/selection.scss";
