Добавляет блок виды велосипедов

--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,16 +1,44 @@
 .page-main {
   h2 {
     text-align: center;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 30px;
+    letter-spacing: -0.005em;
+  }
+
+  @media (max-width: $tablet-max-width) {
+    font-size: 24px;
+    line-height: 41px;
   }
 }
 
 .page-main__about {
   padding-left: 22px;
   padding-right: 22px;
+  margin-bottom: 131px;
 
   @media (max-width: $tablet-max-width) {
     padding-left: 21px;
     padding-right: 21px;
+  }
+
+  @media (max-width: $mobile-max-width) {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+.page-main__types {
+  padding-left: 22px;
+  padding-right: 22px;
+  padding-top: 149px;
+  padding-bottom: 147px;
+  background-color: $light-background;
+
+  @media (max-width: $tablet-max-width) {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   @media (max-width: $mobile-max-width) {
