--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -22,14 +22,21 @@
   h2 {
     margin-top: 0;
     margin-bottom: 40px;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 30px;
+    letter-spacing: -0.005em;
     color: $black;
 
     @media (max-width: $tablet-max-width) {
       margin-bottom: 20px;
+      font-size: 24px;
+      line-height: 41px;
     }
 
     @media (max-width: $mobile-max-width) {
       text-align: center;
+      font-size: 18px;
     }
   }
 
