--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,5 @@
 @import "blocks/page-main.scss";
 @import "blocks/promo.scss";
 @import "blocks/selection.scss";
+@import "blocks/type-bike.scss";
+@import "blocks/types.scss";
