--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,7 @@ $light-background: #f6f7f9;
 $grey: #48494d;
 $light-grey: #c9ccd4;
 $dark-grey: #1c1c1c;
+$special-black: #070707;
 
 // Viewport
 $tablet-max-width: 1023px;
