--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,8 @@
 //blocks
 @import "blocks/about.scss";
 @import "blocks/button.scss";
+@import "blocks/contacts-link.scss";
+@import "blocks/control.scss";
 @import "blocks/form.scss";
 @import "blocks/main-navigation.scss";
 @import "blocks/page-body.scss";
