--- a/source/sass/blocks/type-bike.scss
+++ b/source/sass/blocks/type-bike.scss
@@ -6,6 +6,13 @@
   line-height: 34px;
   color: $basic-black;
 
+  &:hover {
+    opacity: 0.7;
+  }
+  &:active {
+    opacity: 0.4;
+  }
+
   h3 {
     order: 1;
     text-align: center;
