--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -29,7 +29,7 @@
     color: $black;
 
     @media (max-width: $tablet-max-width) {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       font-size: 24px;
       line-height: 41px;
     }
@@ -43,7 +43,7 @@
   p {
     width: 38%;
     margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 37px;
     font-size: 17px;
     line-height: 31px;
     text-align: center;
@@ -54,47 +54,61 @@
       margin-bottom: 20px;
     }
 
-    @media (max-width: $mobile-max-width) {
-      margin-bottom: 25px;
-      text-align: center;
-    }
+  @media (max-width: $mobile-max-width) {
+    margin-bottom: 25px;
+    text-align: center;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 89%;
+    margin: 0 auto 18px;
+  }
+}
+
+img {
+  width: 957px;
+  height: 530px;
+  margin-bottom: 33px;
+
+  @media (max-width: $tablet-max-width) {
+    margin-bottom: 31px;
   }
 
-  img {
-    width: 957px;
-    height: 530px;
-    margin-bottom: 33px;
-
-    @media (max-width: $tablet-max-width) {
-      margin-bottom: 20px;
-    }
-
-    @media (max-width: $mobile-max-width) {
-      width: 100%;
-      object-fit: cover;
-      margin-bottom: 31px;
-    }
+  @media (max-width: $mobile-max-width) {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    margin-bottom: 26px;
   }
+}
 }
 
 .page-footer__contacts {
   display: flex;
+  justify-content: space-between;
+  width: 40.5%;
+  max-width: 558px;
   font-size: 16px;
   line-height: 22px;
   color: rgba($basic-black, 0.5);
 
   @media (max-width: $mobile-max-width) {
-    justify-content: center;
+   flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
 .page-footer__link {
-  &:not(:last-child) {
-    margin-right: 76px;
+   &:not(:last-child) {
+    @media (max-width: $mobile-max-width) {
+      margin-bottom: 25px;
+    }
   }
 
   svg {
-    margin-right: 36px;
+    margin-right: 25px;
 
     @media (max-width: $tablet-max-width) {
       margin-right: 15px;
