Вносит небольшие правки после тестирования

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -10,4 +10,13 @@
   line-height: 21px;
   color: $basic-black;
   text-align: center;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 }
