--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -154,6 +154,7 @@
   padding-bottom: 9px;
   color: $white;
   opacity: 0.7;
+  cursor: pointer;
 
   @media (max-width: $tablet-max-width) {
     height: 60px;
