--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -7,6 +7,7 @@
   border-radius: 50%;
   border-style: none;
   background-color: $turquoise;
+  cursor: pointer;
 
   @media (max-width: $tablet-max-width) {
     width: 90px;
