Правки овки формы и устранение переполнения

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -67,6 +67,7 @@
       position: absolute;
       width: 100%;
       min-height: 340px;
+      height: 50%;
       top: 0;
       left: 0;
       z-index: -1;
