--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -15,6 +15,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 38px;
+    row-gap: 38px;
     padding-left: 0;
     list-style: none;
     font-size: 22px;
