--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,6 +1,7 @@
 .main-navigation {
   ul {
     display: flex;
+    flex-wrap: wrap;
     padding-left: 2.4%;
     padding-right: 2.4%;
     margin-top: 0;
@@ -42,12 +43,13 @@
     @media (max-width: $tablet-max-width) {
       display: flex;
       flex-direction: column;
-    }
+          }
 
     ul {
       @media (max-width: $tablet-max-width) {
         position: static;
         display: block;
+        background-color: $white;
         order: 1;
         border-bottom: none;
         padding-left: 0;
