--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -41,6 +41,7 @@
   }
 
   p {
+    position: relative;
     width: 38%;
     margin-top: 0;
     margin-bottom: 37px;
@@ -52,6 +53,7 @@
     @media (max-width: $tablet-max-width) {
       width: 100%;
       margin-bottom: 20px;
+
     }
 
     @media (max-width: $mobile-max-width) {
@@ -84,6 +86,7 @@
 
 .page-footer__contacts {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 40.5%;
   max-width: 558px;
