--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -7,8 +7,8 @@
   padding-right: 30px;
 
   @media (max-width: $tablet-max-width) {
-    padding-left: 21px;
-    padding-right: 21px;
+    padding-left: 35px;
+    padding-right: 35px;
     padding-bottom: 53px;
   }
 
@@ -88,29 +88,28 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 40.5%;
-  max-width: 558px;
+  width: 558px;
   font-size: 16px;
   line-height: 22px;
   color: rgba($basic-black, 0.5);
 
   @media (max-width: $tablet-max-width) {
-    width: 76.8%;
+    width: 80%;
   }
 
   @media (max-width: $mobile-max-width) {
     flex-direction: column;
+    align-items: center;
     width: 100%;
-    margin: 0 auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 30px;
+    padding-right: 26px;
   }
 }
 
 .page-footer__link {
   &:not(:last-child) {
     @media (max-width: $mobile-max-width) {
-      margin-bottom: 25px;
+      margin-bottom: 24px;
     }
   }
 
@@ -119,6 +118,10 @@
 
     @media (max-width: $tablet-max-width) {
       margin-right: 15px;
+    }
+
+    @media (max-width: $mobile-max-width) {
+      margin-right: 11px;
     }
   }
 }
