--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -21,58 +21,61 @@
     }
   }
 
-  &--opened ul {
+  &--opened {
+    ul {
+      @media (max-width: $tablet-max-width) {
+        position: fixed;
+        z-index: 10;
+        top: 0;
+        right: 0;
+        display: block;
+        width: 100%;
+        height: 100vh;
+        min-height: 568px;
+        padding-top: 100px;
+        padding-left: 0;
+        padding-right: 0;
+        background-color: $white;
+      }
+    }
+
+    li:not(:last-child) {
+      @media (max-width: $tablet-max-width) {
+        margin-bottom: 30px;
+      }
+    }
+  }
+
+&--nojs {
+  @media (max-width: $tablet-max-width) {
+    display: contents;
+  }
+
+  ul {
     @media (max-width: $tablet-max-width) {
-      position: absolute;
-      z-index: 10;
-      top: 0;
-      right: 0;
+      position: static;
       display: block;
-      width: 42%;
-      min-height: 568px;
-      padding-top: 100px;
+      background-color: $white;
+      order: 1;
+      border-bottom: none;
+      padding-top: 30px;
       padding-left: 0;
       padding-right: 0;
-      background-color: $white;
+      width: 100%;
+      order: 3;
+    }
+  }
+
+  .main-navigation__logo {
+    @media (max-width: $tablet-max-width) {
+      margin-bottom: 84px;
     }
 
     @media (max-width: $mobile-max-width) {
-      position: fixed;
-      width: 100%;
-      height: 100vh;
+      margin-bottom: 70px;
     }
   }
-
-  &--nojs {
-    @media (max-width: $tablet-max-width) {
-      display: contents;
-    }
-
-    ul {
-      @media (max-width: $tablet-max-width) {
-        position: static;
-        display: block;
-        background-color: $white;
-        order: 1;
-        border-bottom: none;
-        padding-top: 30px;
-        padding-left: 0;
-        padding-right: 0;
-        width: 100%;
-        order: 3;
-      }
-    }
-
-    .main-navigation__logo {
-      @media (max-width: $tablet-max-width) {
-        margin-bottom: 84px;
-      }
-
-      @media (max-width: $mobile-max-width) {
-        margin-bottom: 70px;
-      }
-    }
-  }
+}
 }
 
 .main-navigation__button {
@@ -154,7 +157,6 @@
 
     @media (max-width: $tablet-max-width) {
       margin-right: 0;
-      margin-bottom: 30px;
     }
   }
 
