--- a/source/sass/blocks/type-bike.scss
+++ b/source/sass/blocks/type-bike.scss
@@ -26,7 +26,9 @@
 
   img {
     margin-bottom: 13px;
-    object-fit: cover;
+    object-fit: scale-down;
+    width: 100%;
+    height: 100%;
 
     @media (max-width: $tablet-max-width) {
       width: 270px;
