Добавляет прокрутку меню

--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -25,6 +25,7 @@
     ul {
       @media (max-width: $tablet-max-width) {
         position: fixed;
+        overflow-y: scroll;
         z-index: 10;
         top: 0;
         right: 0;
